--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.4",
     "next": "15.2.2",
