--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.10.0",
     "axios": "^1.8.3",
     "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.4",
